Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY,
 OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
 OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE." />
 <link id="faviconLink" rel="shortcut icon" href="favicon.ico">
-<title>ZettelKasten — a non-linear personal web notebook</title>
+<title>Thinking Out — Kasten for my Zettels</title>
 <!--~~ This is a Tiddlywiki file. The points of interest in the file are marked with this pattern ~~-->
 
 <!--~~ Raw markup ~~-->
@@ -152,6 +152,8 @@ Error message and password prompt
 <li>$:/GitHub/Username</li>
 
 <li>$:/isEncrypted</li>
+
+<li>$:/SiteSubtitle</li>
 
 <li>$:/SiteTitle</li>
 
@@ -9785,8 +9787,11 @@ Error message and password prompt
 <div title="$:/isEncrypted">
 <pre>no</pre>
 </div>
-<div created="20201009171134000" modified="20201009171138600" title="$:/SiteTitle">
-<pre>ZettelKasten</pre>
+<div created="20201010035143400" modified="20201010035156900" title="$:/SiteSubtitle">
+<pre>Kasten for my Zettels</pre>
+</div>
+<div created="20201009171134000" modified="20201010035133600" title="$:/SiteTitle">
+<pre>Thinking Out</pre>
 </div>
 <div created="20201009173034600" modified="20201009173312000" title="$:/state/tab--1963855381">
 <pre>$:/core/ui/ControlPanel/Theme</pre>
@@ -9806,7 +9811,7 @@ Error message and password prompt
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20201009172901700" list="$:/ControlPanel GettingStarted" modified="20201009173305600" title="$:/StoryList">
+<div created="20201009172901700" list="GettingStarted" modified="20201009173305600" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
