--- a/index.html
+++ b/index.html
@@ -385,6 +385,8 @@ Error message and password prompt
 
 <li>$:/themes/tiddlywiki/vanilla/options/sidebarlayout</li>
 
+<li>ZettelKasten</li>
+
 </ul>
 </p>
 
@@ -9802,8 +9804,8 @@ Error message and password prompt
 <div created="20201009173227400" modified="20201009173303900" title="$:/state/tab--86143343">
 <pre>$:/core/ui/ControlPanel/Plugins/Installed/Themes</pre>
 </div>
-<div created="20201009171149300" modified="20201009173310400" title="$:/state/tab-1749438307">
-<pre>$:/core/ui/ControlPanel/Appearance</pre>
+<div created="20201009171149300" modified="20201010181529900" title="$:/state/tab-1749438307">
+<pre>$:/core/ui/ControlPanel/Saving</pre>
 </div>
 <div created="20201009171151200" modified="20201009171151200" title="$:/state/tab-2065006209">
 <pre>$:/core/ui/ControlPanel/Saving/GitHub</pre>
@@ -9811,7 +9813,7 @@ Error message and password prompt
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20201009172901700" list="GettingStarted" modified="20201009173305600" title="$:/StoryList">
+<div created="20201010181526700" list="$:/ControlPanel ZettelKasten" modified="20201010181526700" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -10950,6 +10952,9 @@ This plugin also requires the JSZip plugin ([[$:/plugins/tiddlywiki/jszip]]) to 
 </div>
 <div created="20201009173056600" modified="20201009173121100" title="$:/themes/tiddlywiki/vanilla/options/sidebarlayout">
 <pre>fixed-fluid</pre>
+</div>
+<div created="20201010181301500" modified="20201010181512200" tags="pkm general" title="ZettelKasten">
+<pre>[[ZettelKasten|https://en.wikipedia.org/wiki/Zettelkasten]] is a methodology of note-taking and structuring information.</pre>
 </div>
 
 
