Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -143,6 +143,8 @@ Error message and password prompt
 
 <li>$:/core</li>
 
+<li>$:/DefaultTiddlers</li>
+
 <li>$:/GitHub/Filename</li>
 
 <li>$:/GitHub/Path</li>
@@ -9774,6 +9776,10 @@ Error message and password prompt
     }
 }</pre>
 </div>
+<div created="20201010181831600" modified="20201010181835500" title="$:/DefaultTiddlers">
+<pre>ZettelKasten
+</pre>
+</div>
 <div created="20201009172006800" modified="20201009172535800" title="$:/GitHub/Filename">
 <pre>index.html</pre>
 </div>
@@ -9804,8 +9810,8 @@ Error message and password prompt
 <div created="20201009173227400" modified="20201009173303900" title="$:/state/tab--86143343">
 <pre>$:/core/ui/ControlPanel/Plugins/Installed/Themes</pre>
 </div>
-<div created="20201009171149300" modified="20201010181529900" title="$:/state/tab-1749438307">
-<pre>$:/core/ui/ControlPanel/Saving</pre>
+<div created="20201009171149300" modified="20201010181823000" title="$:/state/tab-1749438307">
+<pre>$:/core/ui/ControlPanel/Info</pre>
 </div>
 <div created="20201009171151200" modified="20201009171151200" title="$:/state/tab-2065006209">
 <pre>$:/core/ui/ControlPanel/Saving/GitHub</pre>
@@ -9813,7 +9819,7 @@ Error message and password prompt
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20201010181526700" list="$:/ControlPanel ZettelKasten" modified="20201010181526700" title="$:/StoryList">
+<div created="20201010181526700" list="$:/ControlPanel ZettelKasten" modified="20201010181818800" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
