--- a/index.html
+++ b/index.html
@@ -161,6 +161,8 @@ Error message and password prompt
 
 <li>$:/state/tab--1963855381</li>
 
+<li>$:/state/tab--2112689675</li>
+
 <li>$:/state/tab--219645345</li>
 
 <li>$:/state/tab--86143343</li>
@@ -386,6 +388,8 @@ Error message and password prompt
 <li>$:/themes/tiddlywiki/vanilla</li>
 
 <li>$:/themes/tiddlywiki/vanilla/options/sidebarlayout</li>
+
+<li>Kubernetes</li>
 
 <li>ZettelKasten</li>
 
@@ -9804,6 +9808,9 @@ Error message and password prompt
 <div created="20201009173034600" modified="20201009173312000" title="$:/state/tab--1963855381">
 <pre>$:/core/ui/ControlPanel/Theme</pre>
 </div>
+<div created="20201010182901200" modified="20201010182901200" title="$:/state/tab--2112689675">
+<pre>$:/core/ui/ControlPanel/Advanced</pre>
+</div>
 <div created="20201009173247900" modified="20201009173247900" title="$:/state/tab--219645345">
 <pre>$:/core/ui/ControlPanel/Plugins/Add/Themes</pre>
 </div>
@@ -9819,7 +9826,7 @@ Error message and password prompt
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20201010181526700" list="$:/ControlPanel ZettelKasten" modified="20201010181818800" title="$:/StoryList">
+<div created="20201010181526700" list="Kubernetes ZettelKasten" modified="20201010181818800" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -10958,6 +10965,9 @@ This plugin also requires the JSZip plugin ([[$:/plugins/tiddlywiki/jszip]]) to 
 </div>
 <div created="20201009173056600" modified="20201009173121100" title="$:/themes/tiddlywiki/vanilla/options/sidebarlayout">
 <pre>fixed-fluid</pre>
+</div>
+<div created="20201011024535600" modified="20201011024939100" tags="k8s" title="Kubernetes">
+<pre>Kubernetes is a system for managing containerized applications across multiple hosts ^^[[1|https://github.com/kubernetes/kubernetes/#kubernetes]]^^</pre>
 </div>
 <div created="20201010181301500" modified="20201010181702100" tags="pkm general" title="ZettelKasten">
 <pre>[[ZettelKasten|https://en.wikipedia.org/wiki/Zettelkasten]] is a methodology of note-taking and structuring information. There are many resources for understanding it. I think [[this|https://zettelkasten.de/posts/zettelkasten-improves-thinking-writing/]] is one of the earliest on the web.</pre>
