Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -10966,8 +10966,8 @@ This plugin also requires the JSZip plugin ([[$:/plugins/tiddlywiki/jszip]]) to 
 <div created="20201009173056600" modified="20201009173121100" title="$:/themes/tiddlywiki/vanilla/options/sidebarlayout">
 <pre>fixed-fluid</pre>
 </div>
-<div created="20201011024535600" modified="20201011025039400" tags="k8s" title="Kubernetes">
-<pre>Kubernetes is a system for managing containerized applications across multiple hosts ^^[[1|https://github.com/kubernetes/kubernetes/#kubernetes]]^^. </pre>
+<div created="20201011024535600" modified="20201011025211000" tags="k8s" title="Kubernetes">
+<pre>Kubernetes is a system for managing {{containerized}} applications across multiple hosts ^^[[1|https://github.com/kubernetes/kubernetes/#kubernetes]]^^. </pre>
 </div>
 <div created="20201010181301500" modified="20201010181702100" tags="pkm general" title="ZettelKasten">
 <pre>[[ZettelKasten|https://en.wikipedia.org/wiki/Zettelkasten]] is a methodology of note-taking and structuring information. There are many resources for understanding it. I think [[this|https://zettelkasten.de/posts/zettelkasten-improves-thinking-writing/]] is one of the earliest on the web.</pre>
