--- a/index.html
+++ b/index.html
@@ -9826,7 +9826,7 @@ Error message and password prompt
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20201010181526700" list="Kubernetes ZettelKasten" modified="20201010181818800" title="$:/StoryList">
+<div created="20201010181526700" list="Kubernetes ContainerizedApplications ZettelKasten" modified="20201011025351800" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -10966,7 +10966,7 @@ This plugin also requires the JSZip plugin ([[$:/plugins/tiddlywiki/jszip]]) to 
 <div created="20201009173056600" modified="20201009173121100" title="$:/themes/tiddlywiki/vanilla/options/sidebarlayout">
 <pre>fixed-fluid</pre>
 </div>
-<div created="20201011024535600" modified="20201011025315900" tags="k8s" title="Kubernetes">
+<div created="20201011024535600" modified="20201011025425300" tags="k8s" title="Kubernetes">
 <pre>Kubernetes is a system for managing containerized applications across multiple hosts ^^[[1|https://github.com/kubernetes/kubernetes/#kubernetes]]^^. </pre>
 </div>
 <div created="20201010181301500" modified="20201010181702100" tags="pkm general" title="ZettelKasten">
