Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -9826,7 +9826,7 @@ Error message and password prompt
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20201010181526700" list="Kubernetes ZettelKasten" modified="20201011025351800" title="$:/StoryList">
+<div created="20201010181526700" list="Kubernetes Containerization ZettelKasten" modified="20201011025722300" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -10966,8 +10966,8 @@ This plugin also requires the JSZip plugin ([[$:/plugins/tiddlywiki/jszip]]) to 
 <div created="20201009173056600" modified="20201009173121100" title="$:/themes/tiddlywiki/vanilla/options/sidebarlayout">
 <pre>fixed-fluid</pre>
 </div>
-<div created="20201011024535600" modified="20201011025720500" tags="k8s" title="Kubernetes">
-<pre>Kubernetes is a system for managing [[containerized applications|Containerization]] across multiple hosts ^^[[1|https://github.com/kubernetes/kubernetes/#kubernetes]]^^. </pre>
+<div created="20201011024535600" modified="20201011040452600" tags="k8s" title="Kubernetes">
+<pre>Kubernetes is a system for managing [[containerized applications|Containerization]] across multiple hosts ^^[[1|https://github.com/kubernetes/kubernetes/#kubernetes]]^^. It is a Greek word meaning &quot;helmsman&quot; or &quot;pilot&quot;. It is also the root of the word cybernetics. </pre>
 </div>
 <div created="20201010181301500" modified="20201010181702100" tags="pkm general" title="ZettelKasten">
 <pre>[[ZettelKasten|https://en.wikipedia.org/wiki/Zettelkasten]] is a methodology of note-taking and structuring information. There are many resources for understanding it. I think [[this|https://zettelkasten.de/posts/zettelkasten-improves-thinking-writing/]] is one of the earliest on the web.</pre>
