--- a/index.html
+++ b/index.html
@@ -171,11 +171,15 @@ Error message and password prompt
 
 <li>$:/state/tab-2065006209</li>
 
+<li>$:/state/tab/sidebar--595412856</li>
+
 <li>$:/status/RequireReloadDueToPluginChange</li>
 
 <li>$:/StoryList</li>
 
 <li>$:/temp/info-plugin</li>
+
+<li>$:/temp/NewTagName</li>
 
 <li>$:/temp/RemoteAssetInfo/https://tiddlywiki.com/library/v5.1.22/index.html/$:/languages/ca-ES</li>
 
@@ -390,6 +394,8 @@ Error message and password prompt
 <li>$:/themes/tiddlywiki/vanilla/options/sidebarlayout</li>
 
 <li>Kubernetes</li>
+
+<li>Testing</li>
 
 <li>ZettelKasten</li>
 
@@ -9817,16 +9823,19 @@ Error message and password prompt
 <div created="20201009173227400" modified="20201009173303900" title="$:/state/tab--86143343">
 <pre>$:/core/ui/ControlPanel/Plugins/Installed/Themes</pre>
 </div>
-<div created="20201009171149300" modified="20201010181823000" title="$:/state/tab-1749438307">
-<pre>$:/core/ui/ControlPanel/Info</pre>
+<div created="20201009171149300" modified="20201012173013800" title="$:/state/tab-1749438307">
+<pre>$:/core/ui/ControlPanel/Saving</pre>
 </div>
 <div created="20201009171151200" modified="20201009171151200" title="$:/state/tab-2065006209">
 <pre>$:/core/ui/ControlPanel/Saving/GitHub</pre>
 </div>
+<div created="20201012172852600" modified="20201012172852600" title="$:/state/tab/sidebar--595412856">
+<pre>$:/core/ui/SideBar/Recent</pre>
+</div>
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20201010181526700" list="Kubernetes Containerization ZettelKasten" modified="20201011025722300" title="$:/StoryList">
+<div created="20201012173011700" list="$:/ControlPanel Testing ZettelKasten" modified="20201012173011700" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9874,11 +9883,11 @@ Error message and password prompt
         },
         &quot;$:/info/browser/screen/width&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/width&quot;,
-            &quot;text&quot;: &quot;1920&quot;
+            &quot;text&quot;: &quot;934&quot;
         },
         &quot;$:/info/browser/screen/height&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/height&quot;,
-            &quot;text&quot;: &quot;886&quot;
+            &quot;text&quot;: &quot;949&quot;
         },
         &quot;$:/info/browser/language&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/language&quot;,
@@ -9886,6 +9895,9 @@ Error message and password prompt
         }
     }
 }</pre>
+</div>
+<div created="20201012172928600" modified="20201012172928600" title="$:/temp/NewTagName">
+<pre></pre>
 </div>
 <div author="Paco Rivière" core-version="&gt;=5.0.0" created="20201009173237100" dependents="" description="Catalan (Spain)" icon="data:image/svg+xml,%3C%3Fxml%20version%3D%221.0%22%20encoding%3D%22UTF-8%22%3F%3E%0A%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22810%22%20height%3D%22540%22%3E%0A%3Crect%20width%3D%22810%22%20height%3D%22540%22%20fill%3D%22%23FCDD09%22%2F%3E%0A%3Cpath%20stroke%3D%22%23DA121A%22%20stroke-width%3D%2260%22%20d%3D%22M0%2C90H810m0%2C120H0m0%2C120H810m0%2C120H0%22%2F%3E%0A%3C%2Fsvg%3E" modified="20201009173237100" name="ca-ES" original-plugin-type="language" original-tags="" original-title="$:/languages/ca-ES" original-type="application/json" requires-reload="no" server-url="https://tiddlywiki.com/library/v5.1.22/index.html" tags="$:/tags/RemoteAssetInfo" title="$:/temp/RemoteAssetInfo/https://tiddlywiki.com/library/v5.1.22/index.html/$:/languages/ca-ES" type="text/vnd.tiddlywiki" version="5.1.22">
 <pre></pre>
@@ -10968,6 +10980,9 @@ This plugin also requires the JSZip plugin ([[$:/plugins/tiddlywiki/jszip]]) to 
 </div>
 <div created="20201011024535600" modified="20201011040452600" tags="k8s" title="Kubernetes">
 <pre>Kubernetes is a system for managing [[containerized applications|Containerization]] across multiple hosts ^^[[1|https://github.com/kubernetes/kubernetes/#kubernetes]]^^. It is a Greek word meaning &quot;helmsman&quot; or &quot;pilot&quot;. It is also the root of the word cybernetics. </pre>
+</div>
+<div created="20201012172857500" modified="20201012173153800" tags="test" title="Testing">
+<pre>I am writing out a [[post|https://medium.com/@copyconstruct/testing-microservices-the-sane-way-9bb31d158c16]] on testing from Cindy Sridharan to understand it. Then I want to post a summary of it like a literature review. </pre>
 </div>
 <div created="20201010181301500" modified="20201010181702100" tags="pkm general" title="ZettelKasten">
 <pre>[[ZettelKasten|https://en.wikipedia.org/wiki/Zettelkasten]] is a methodology of note-taking and structuring information. There are many resources for understanding it. I think [[this|https://zettelkasten.de/posts/zettelkasten-improves-thinking-writing/]] is one of the earliest on the web.</pre>
