--- a/index.html
+++ b/index.html
@@ -10981,8 +10981,8 @@ This plugin also requires the JSZip plugin ([[$:/plugins/tiddlywiki/jszip]]) to 
 <div created="20201011024535600" modified="20201011040452600" tags="k8s" title="Kubernetes">
 <pre>Kubernetes is a system for managing [[containerized applications|Containerization]] across multiple hosts ^^[[1|https://github.com/kubernetes/kubernetes/#kubernetes]]^^. It is a Greek word meaning &quot;helmsman&quot; or &quot;pilot&quot;. It is also the root of the word cybernetics. </pre>
 </div>
-<div created="20201012172857500" modified="20201012173153800" tags="test" title="Testing">
-<pre>I am writing out a [[post|https://medium.com/@copyconstruct/testing-microservices-the-sane-way-9bb31d158c16]] on testing from Cindy Sridharan to understand it. Then I want to post a summary of it like a literature review. </pre>
+<div created="20201012172857500" modified="20201012173336900" tags="test" title="Testing">
+<pre>I am writing out a [[post|https://medium.com/@copyconstruct/testing-microservices-the-sane-way-9bb31d158c16]] on testing microservices from [[Cindy Sridharan|https://twitter.com/copyconstruct]] to understand it well. This posts primarily focuses on pre-production testing in the context of microservices. </pre>
 </div>
 <div created="20201010181301500" modified="20201010181702100" tags="pkm general" title="ZettelKasten">
 <pre>[[ZettelKasten|https://en.wikipedia.org/wiki/Zettelkasten]] is a methodology of note-taking and structuring information. There are many resources for understanding it. I think [[this|https://zettelkasten.de/posts/zettelkasten-improves-thinking-writing/]] is one of the earliest on the web.</pre>
