Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -393,6 +393,8 @@ Error message and password prompt
 
 <li>$:/themes/tiddlywiki/vanilla/options/sidebarlayout</li>
 
+<li>Containerization</li>
+
 <li>Kubernetes</li>
 
 <li>Testing</li>
@@ -9835,7 +9837,7 @@ Error message and password prompt
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20201012173011700" list="$:/ControlPanel Testing ZettelKasten" modified="20201012173011700" title="$:/StoryList">
+<div created="20201012173011700" list="Kubernetes Containerization Testing ZettelKasten" modified="20201012173500400" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9896,7 +9898,7 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div created="20201012172928600" modified="20201012172928600" title="$:/temp/NewTagName">
+<div created="20201012172928600" modified="20201012173533300" title="$:/temp/NewTagName">
 <pre></pre>
 </div>
 <div author="Paco Rivière" core-version="&gt;=5.0.0" created="20201009173237100" dependents="" description="Catalan (Spain)" icon="data:image/svg+xml,%3C%3Fxml%20version%3D%221.0%22%20encoding%3D%22UTF-8%22%3F%3E%0A%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22810%22%20height%3D%22540%22%3E%0A%3Crect%20width%3D%22810%22%20height%3D%22540%22%20fill%3D%22%23FCDD09%22%2F%3E%0A%3Cpath%20stroke%3D%22%23DA121A%22%20stroke-width%3D%2260%22%20d%3D%22M0%2C90H810m0%2C120H0m0%2C120H810m0%2C120H0%22%2F%3E%0A%3C%2Fsvg%3E" modified="20201009173237100" name="ca-ES" original-plugin-type="language" original-tags="" original-title="$:/languages/ca-ES" original-type="application/json" requires-reload="no" server-url="https://tiddlywiki.com/library/v5.1.22/index.html" tags="$:/tags/RemoteAssetInfo" title="$:/temp/RemoteAssetInfo/https://tiddlywiki.com/library/v5.1.22/index.html/$:/languages/ca-ES" type="text/vnd.tiddlywiki" version="5.1.22">
@@ -10977,6 +10979,9 @@ This plugin also requires the JSZip plugin ([[$:/plugins/tiddlywiki/jszip]]) to 
 </div>
 <div created="20201009173056600" modified="20201009173121100" title="$:/themes/tiddlywiki/vanilla/options/sidebarlayout">
 <pre>fixed-fluid</pre>
+</div>
+<div created="20201012173504400" modified="20201012173534700" tags="devops ops" title="Containerization">
+<pre>Containers are restricted process running on host machine</pre>
 </div>
 <div created="20201011024535600" modified="20201011040452600" tags="k8s" title="Kubernetes">
 <pre>Kubernetes is a system for managing [[containerized applications|Containerization]] across multiple hosts ^^[[1|https://github.com/kubernetes/kubernetes/#kubernetes]]^^. It is a Greek word meaning &quot;helmsman&quot; or &quot;pilot&quot;. It is also the root of the word cybernetics. </pre>
