Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -9839,7 +9839,7 @@ Error message and password prompt
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20201012173011700" list="Kubernetes Containerization Testing ZettelKasten" modified="20201012173500400" title="$:/StoryList">
+<div created="20201013171052041" list="Containerization Testing ZettelKasten" modified="20201013171108762" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9887,15 +9887,15 @@ Error message and password prompt
         },
         &quot;$:/info/browser/screen/width&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/width&quot;,
-            &quot;text&quot;: &quot;934&quot;
+            &quot;text&quot;: &quot;393&quot;
         },
         &quot;$:/info/browser/screen/height&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/height&quot;,
-            &quot;text&quot;: &quot;949&quot;
+            &quot;text&quot;: &quot;784&quot;
         },
         &quot;$:/info/browser/language&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/language&quot;,
-            &quot;text&quot;: &quot;en-US&quot;
+            &quot;text&quot;: &quot;en-IN&quot;
         }
     }
 }</pre>
@@ -10985,8 +10985,8 @@ This plugin also requires the JSZip plugin ([[$:/plugins/tiddlywiki/jszip]]) to 
 <div created="20201009173056600" modified="20201009173121100" title="$:/themes/tiddlywiki/vanilla/options/sidebarlayout">
 <pre>fixed-fluid</pre>
 </div>
-<div created="20201012173504400" modified="20201012173556200" tags="devops ops" title="Containerization">
-<pre>[WIP] Containers are restricted process running on a host machine</pre>
+<div created="20201012173504400" modified="20201013171128367" tags="devops ops" title="Containerization">
+<pre>[WIP] Containers are restricted process running on a host machine.</pre>
 </div>
 <div created="20201011024535600" modified="20201011040452600" tags="k8s" title="Kubernetes">
 <pre>Kubernetes is a system for managing [[containerized applications|Containerization]] across multiple hosts ^^[[1|https://github.com/kubernetes/kubernetes/#kubernetes]]^^. It is a Greek word meaning &quot;helmsman&quot; or &quot;pilot&quot;. It is also the root of the word cybernetics. </pre>
