Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -9839,7 +9839,7 @@ Error message and password prompt
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div list="ZettelKasten" title="$:/StoryList">
+<div created="20201014182432673" list="Containerization ZettelKasten" modified="20201014182432673" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -10994,8 +10994,8 @@ This plugin also requires the JSZip plugin ([[$:/plugins/tiddlywiki/jszip]]) to 
 <div created="20201012172857500" modified="20201012173752400" tags="test" title="Testing">
 <pre>I am copying out a [[post|https://medium.com/@copyconstruct/testing-microservices-the-sane-way-9bb31d158c16]] on testing microservices from [[Cindy Sridharan|https://twitter.com/copyconstruct]] to understand it well. This posts primarily focuses on pre-production testing in the context of microservices. After this step, I want to be able to summarise it and pick out a few key points. </pre>
 </div>
-<div created="20201010181301500" modified="20201014182402170" tags="pkm general" title="ZettelKasten">
-<pre>[[ZettelKasten|https://en.wikipedia.org/wiki/Zettelkasten]] is a methodology of note-taking and structuring information. There are many resources for understanding it. I came to know about it from the book [[How to Take Smart Notes|https://takesmartnotes.com/]]. I think [[this|https://zettelkasten.de/posts/zettelkasten-improves-thinking-writing/]] is one of the earliest on the web. </pre>
+<div created="20201010181301500" modified="20201014182427884" tags="pkm general" title="ZettelKasten">
+<pre>[[ZettelKasten|https://en.wikipedia.org/wiki/Zettelkasten]] is a methodology of note-taking and structuring information. There are many resources for understanding it. I came to know about it from the book: [[How to Take Smart Notes|https://takesmartnotes.com/]]. I think [[this|https://zettelkasten.de/posts/zettelkasten-improves-thinking-writing/]] is one of the earliest on the web. </pre>
 </div>
 
 
