--- a/index.html
+++ b/index.html
@@ -159,6 +159,8 @@ Error message and password prompt
 
 <li>$:/SiteTitle</li>
 
+<li>$:/state/sidebar</li>
+
 <li>$:/state/tab--1963855381</li>
 
 <li>$:/state/tab--2112689675</li>
@@ -396,6 +398,8 @@ Error message and password prompt
 <li>$:/themes/tiddlywiki/vanilla/options/sidebarlayout</li>
 
 <li>Containerization</li>
+
+<li>Correlation</li>
 
 <li>Kubernetes</li>
 
@@ -9815,8 +9819,11 @@ Error message and password prompt
 <div created="20201009171134000" modified="20201010035133600" title="$:/SiteTitle">
 <pre>Thinking Out</pre>
 </div>
-<div created="20201009173034600" modified="20201009173312000" title="$:/state/tab--1963855381">
-<pre>$:/core/ui/ControlPanel/Theme</pre>
+<div created="20201016160731500" modified="20201016160747700" title="$:/state/sidebar">
+<pre>yes</pre>
+</div>
+<div created="20201009173034600" modified="20201016160716800" title="$:/state/tab--1963855381">
+<pre>$:/core/ui/ControlPanel/Palette</pre>
 </div>
 <div created="20201010182901200" modified="20201010182901200" title="$:/state/tab--2112689675">
 <pre>$:/core/ui/ControlPanel/Advanced</pre>
@@ -9827,19 +9834,19 @@ Error message and password prompt
 <div created="20201009173227400" modified="20201009173303900" title="$:/state/tab--86143343">
 <pre>$:/core/ui/ControlPanel/Plugins/Installed/Themes</pre>
 </div>
-<div created="20201009171149300" modified="20201012173013800" title="$:/state/tab-1749438307">
-<pre>$:/core/ui/ControlPanel/Saving</pre>
+<div created="20201009171149300" modified="20201016160720100" title="$:/state/tab-1749438307">
+<pre>$:/core/ui/ControlPanel/Settings</pre>
 </div>
 <div created="20201009171151200" modified="20201009171151200" title="$:/state/tab-2065006209">
 <pre>$:/core/ui/ControlPanel/Saving/GitHub</pre>
 </div>
-<div created="20201012172852600" modified="20201012172852600" title="$:/state/tab/sidebar--595412856">
+<div created="20201012172852600" modified="20201016160751000" title="$:/state/tab/sidebar--595412856">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20201014182432673" list="Containerization ZettelKasten" modified="20201014182432673" title="$:/StoryList">
+<div created="20201012173011700" list="Correlation Kubernetes Containerization Testing ZettelKasten" modified="20201016160708100" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9887,20 +9894,20 @@ Error message and password prompt
         },
         &quot;$:/info/browser/screen/width&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/width&quot;,
-            &quot;text&quot;: &quot;393&quot;
+            &quot;text&quot;: &quot;934&quot;
         },
         &quot;$:/info/browser/screen/height&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/height&quot;,
-            &quot;text&quot;: &quot;784&quot;
+            &quot;text&quot;: &quot;949&quot;
         },
         &quot;$:/info/browser/language&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/language&quot;,
-            &quot;text&quot;: &quot;en-IN&quot;
+            &quot;text&quot;: &quot;en-US&quot;
         }
     }
 }</pre>
 </div>
-<div created="20201012172928600" modified="20201012173533300" title="$:/temp/NewTagName">
+<div created="20201012172928600" modified="20201016174102000" title="$:/temp/NewTagName">
 <pre></pre>
 </div>
 <div author="Paco Rivière" core-version="&gt;=5.0.0" created="20201009173237100" dependents="" description="Catalan (Spain)" icon="data:image/svg+xml,%3C%3Fxml%20version%3D%221.0%22%20encoding%3D%22UTF-8%22%3F%3E%0A%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22810%22%20height%3D%22540%22%3E%0A%3Crect%20width%3D%22810%22%20height%3D%22540%22%20fill%3D%22%23FCDD09%22%2F%3E%0A%3Cpath%20stroke%3D%22%23DA121A%22%20stroke-width%3D%2260%22%20d%3D%22M0%2C90H810m0%2C120H0m0%2C120H810m0%2C120H0%22%2F%3E%0A%3C%2Fsvg%3E" modified="20201009173237100" name="ca-ES" original-plugin-type="language" original-tags="" original-title="$:/languages/ca-ES" original-type="application/json" requires-reload="no" server-url="https://tiddlywiki.com/library/v5.1.22/index.html" tags="$:/tags/RemoteAssetInfo" title="$:/temp/RemoteAssetInfo/https://tiddlywiki.com/library/v5.1.22/index.html/$:/languages/ca-ES" type="text/vnd.tiddlywiki" version="5.1.22">
@@ -10985,8 +10992,11 @@ This plugin also requires the JSZip plugin ([[$:/plugins/tiddlywiki/jszip]]) to 
 <div created="20201009173056600" modified="20201009173121100" title="$:/themes/tiddlywiki/vanilla/options/sidebarlayout">
 <pre>fixed-fluid</pre>
 </div>
-<div created="20201012173504400" modified="20201013171128367" tags="devops ops" title="Containerization">
-<pre>[WIP] Containers are restricted process running on a host machine.</pre>
+<div created="20201012173504400" modified="20201012173556200" tags="devops ops" title="Containerization">
+<pre>[WIP] Containers are restricted process running on a host machine</pre>
+</div>
+<div created="20201016174035100" modified="20201016174154400" tags="stats" title="Correlation">
+<pre>Estimating probability distributions with Monte Carlo simulations. </pre>
 </div>
 <div created="20201011024535600" modified="20201011040452600" tags="k8s" title="Kubernetes">
 <pre>Kubernetes is a system for managing [[containerized applications|Containerization]] across multiple hosts ^^[[1|https://github.com/kubernetes/kubernetes/#kubernetes]]^^. It is a Greek word meaning &quot;helmsman&quot; or &quot;pilot&quot;. It is also the root of the word cybernetics. </pre>
@@ -10994,8 +11004,8 @@ This plugin also requires the JSZip plugin ([[$:/plugins/tiddlywiki/jszip]]) to 
 <div created="20201012172857500" modified="20201012173752400" tags="test" title="Testing">
 <pre>I am copying out a [[post|https://medium.com/@copyconstruct/testing-microservices-the-sane-way-9bb31d158c16]] on testing microservices from [[Cindy Sridharan|https://twitter.com/copyconstruct]] to understand it well. This posts primarily focuses on pre-production testing in the context of microservices. After this step, I want to be able to summarise it and pick out a few key points. </pre>
 </div>
-<div created="20201010181301500" modified="20201014182427884" tags="pkm general" title="ZettelKasten">
-<pre>[[ZettelKasten|https://en.wikipedia.org/wiki/Zettelkasten]] is a methodology of note-taking and structuring information. There are many resources for understanding it. I came to know about it from the book: [[How to Take Smart Notes|https://takesmartnotes.com/]]. I think [[this|https://zettelkasten.de/posts/zettelkasten-improves-thinking-writing/]] is one of the earliest on the web. </pre>
+<div created="20201010181301500" modified="20201010181702100" tags="pkm general" title="ZettelKasten">
+<pre>[[ZettelKasten|https://en.wikipedia.org/wiki/Zettelkasten]] is a methodology of note-taking and structuring information. There are many resources for understanding it. I think [[this|https://zettelkasten.de/posts/zettelkasten-improves-thinking-writing/]] is one of the earliest on the web.</pre>
 </div>
 
 
