Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -399,9 +399,9 @@ Error message and password prompt
 
 <li>Containerization</li>
 
-<li>Correlation</li>
-
 <li>Kubernetes</li>
+
+<li>Monte Carlo simulations</li>
 
 <li>Testing</li>
 
@@ -9846,7 +9846,7 @@ Error message and password prompt
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20201012173011700" list="Correlation Kubernetes Containerization Testing ZettelKasten" modified="20201016160708100" title="$:/StoryList">
+<div created="20201018012524523" list="[[Monte Carlo simulations]] ZettelKasten" modified="20201018012524523" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9894,15 +9894,15 @@ Error message and password prompt
         },
         &quot;$:/info/browser/screen/width&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/width&quot;,
-            &quot;text&quot;: &quot;934&quot;
+            &quot;text&quot;: &quot;393&quot;
         },
         &quot;$:/info/browser/screen/height&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/height&quot;,
-            &quot;text&quot;: &quot;949&quot;
+            &quot;text&quot;: &quot;784&quot;
         },
         &quot;$:/info/browser/language&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/language&quot;,
-            &quot;text&quot;: &quot;en-US&quot;
+            &quot;text&quot;: &quot;en-IN&quot;
         }
     }
 }</pre>
@@ -10995,11 +10995,11 @@ This plugin also requires the JSZip plugin ([[$:/plugins/tiddlywiki/jszip]]) to 
 <div created="20201012173504400" modified="20201012173556200" tags="devops ops" title="Containerization">
 <pre>[WIP] Containers are restricted process running on a host machine</pre>
 </div>
-<div created="20201016174035100" modified="20201016174154400" tags="stats" title="Correlation">
-<pre>Estimating probability distributions with Monte Carlo simulations. </pre>
-</div>
 <div created="20201011024535600" modified="20201011040452600" tags="k8s" title="Kubernetes">
 <pre>Kubernetes is a system for managing [[containerized applications|Containerization]] across multiple hosts ^^[[1|https://github.com/kubernetes/kubernetes/#kubernetes]]^^. It is a Greek word meaning &quot;helmsman&quot; or &quot;pilot&quot;. It is also the root of the word cybernetics. </pre>
+</div>
+<div created="20201016174035100" modified="20201018012536829" tags="stats" title="Monte Carlo simulations">
+<pre>Estimating probability distributions with Monte Carlo simulations. </pre>
 </div>
 <div created="20201012172857500" modified="20201012173752400" tags="test" title="Testing">
 <pre>I am copying out a [[post|https://medium.com/@copyconstruct/testing-microservices-the-sane-way-9bb31d158c16]] on testing microservices from [[Cindy Sridharan|https://twitter.com/copyconstruct]] to understand it well. This posts primarily focuses on pre-production testing in the context of microservices. After this step, I want to be able to summarise it and pick out a few key points. </pre>
