Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -10998,8 +10998,8 @@ This plugin also requires the JSZip plugin ([[$:/plugins/tiddlywiki/jszip]]) to 
 <div created="20201011024535600" modified="20201011040452600" tags="k8s" title="Kubernetes">
 <pre>Kubernetes is a system for managing [[containerized applications|Containerization]] across multiple hosts ^^[[1|https://github.com/kubernetes/kubernetes/#kubernetes]]^^. It is a Greek word meaning &quot;helmsman&quot; or &quot;pilot&quot;. It is also the root of the word cybernetics. </pre>
 </div>
-<div created="20201016174035100" modified="20201018012536829" tags="stats" title="Monte Carlo simulations">
-<pre>Estimating probability distributions with Monte Carlo simulations. </pre>
+<div created="20201016174035100" modified="20201018012808828" tags="stats" title="Monte Carlo simulations">
+<pre>I am interested in learning how to estimate probability distributions with Monte Carlo simulations. </pre>
 </div>
 <div created="20201012172857500" modified="20201012173752400" tags="test" title="Testing">
 <pre>I am copying out a [[post|https://medium.com/@copyconstruct/testing-microservices-the-sane-way-9bb31d158c16]] on testing microservices from [[Cindy Sridharan|https://twitter.com/copyconstruct]] to understand it well. This posts primarily focuses on pre-production testing in the context of microservices. After this step, I want to be able to summarise it and pick out a few key points. </pre>
