--- a/index.html
+++ b/index.html
@@ -9848,7 +9848,7 @@ Error message and password prompt
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div list="Backup ZettelKasten" title="$:/StoryList">
+<div created="20201018183542373" list="Backup ZettelKasten" modified="20201018183542373" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -10994,8 +10994,8 @@ This plugin also requires the JSZip plugin ([[$:/plugins/tiddlywiki/jszip]]) to 
 <div created="20201009173056600" modified="20201009173121100" title="$:/themes/tiddlywiki/vanilla/options/sidebarlayout">
 <pre>fixed-fluid</pre>
 </div>
-<div created="20201018183417440" modified="20201018183537253" tags="" title="Backup">
-<pre>[[All Notes|dtrik.github.io/notes]]</pre>
+<div created="20201018183417440" modified="20201018183634375" tags="" title="Backup">
+<pre>[[All Notes|https://dtrik.github.io/notes]]</pre>
 </div>
 <div created="20201012173504400" modified="20201012173556200" tags="devops ops" title="Containerization">
 <pre>[WIP] Containers are restricted process running on a host machine</pre>
