--- a/index.html
+++ b/index.html
@@ -397,6 +397,8 @@ Error message and password prompt
 
 <li>$:/themes/tiddlywiki/vanilla/options/sidebarlayout</li>
 
+<li>202011172322 ZettelKasten in TiddlyWiki</li>
+
 <li>Backup</li>
 
 <li>Containerization</li>
@@ -9836,8 +9838,8 @@ Error message and password prompt
 <div created="20201009173227400" modified="20201009173303900" title="$:/state/tab--86143343">
 <pre>$:/core/ui/ControlPanel/Plugins/Installed/Themes</pre>
 </div>
-<div created="20201009171149300" modified="20201016160720100" title="$:/state/tab-1749438307">
-<pre>$:/core/ui/ControlPanel/Settings</pre>
+<div created="20201009171149300" modified="20201117175500700" title="$:/state/tab-1749438307">
+<pre>$:/core/ui/ControlPanel/Saving</pre>
 </div>
 <div created="20201009171151200" modified="20201009171151200" title="$:/state/tab-2065006209">
 <pre>$:/core/ui/ControlPanel/Saving/GitHub</pre>
@@ -9848,7 +9850,7 @@ Error message and password prompt
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20201018183542373" list="Backup ZettelKasten" modified="20201018183542373" title="$:/StoryList">
+<div created="20201117175458400" list="$:/ControlPanel [[202011172322 ZettelKasten in TiddlyWiki]] ZettelKasten" modified="20201117175458400" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9896,15 +9898,15 @@ Error message and password prompt
         },
         &quot;$:/info/browser/screen/width&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/width&quot;,
-            &quot;text&quot;: &quot;393&quot;
+            &quot;text&quot;: &quot;1888&quot;
         },
         &quot;$:/info/browser/screen/height&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/height&quot;,
-            &quot;text&quot;: &quot;784&quot;
+            &quot;text&quot;: &quot;949&quot;
         },
         &quot;$:/info/browser/language&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/language&quot;,
-            &quot;text&quot;: &quot;en-IN&quot;
+            &quot;text&quot;: &quot;en-US&quot;
         }
     }
 }</pre>
@@ -10993,6 +10995,9 @@ This plugin also requires the JSZip plugin ([[$:/plugins/tiddlywiki/jszip]]) to 
 </div>
 <div created="20201009173056600" modified="20201009173121100" title="$:/themes/tiddlywiki/vanilla/options/sidebarlayout">
 <pre>fixed-fluid</pre>
+</div>
+<div created="20201117175206500" modified="20201117175450600" tags="" title="202011172322 ZettelKasten in TiddlyWiki">
+<pre>Each tiddler acting as a zettel is an interesting proposition. </pre>
 </div>
 <div created="20201018183417440" modified="20201018183634375" tags="" title="Backup">
 <pre>[[All Notes|https://dtrik.github.io/notes]]</pre>
