--- a/index.html
+++ b/index.html
@@ -434,8 +434,8 @@ Error message and password prompt
 <div modified="20201117180802300" tags="kasten" title="$:/config/NewJournal/Tags">
 <pre></pre>
 </div>
-<div created="20201117175942000" modified="20201117180742000" title="$:/config/NewJournal/Title">
-<pre>YYYY0MM0DD0hh0mm0ss</pre>
+<div created="20201117175942000" modified="20201117180939500" title="$:/config/NewJournal/Title">
+<pre>YYYY0MM0DD0hh0mm</pre>
 </div>
 <div created="20201117180354000" modified="20201117180354000" title="$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/new-journal">
 <pre>show</pre>
@@ -9865,7 +9865,7 @@ Error message and password prompt
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20201117175458400" list="$:/ControlPanel [[202011172322 ZettelKasten in TiddlyWiki]] ZettelKasten" modified="20201117175458400" title="$:/StoryList">
+<div created="20201117175458400" list="[[202011172322 ZettelKasten in TiddlyWiki]] ZettelKasten" modified="20201117175458400" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
