Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -9853,8 +9853,8 @@ Error message and password prompt
 <div created="20201009173227400" modified="20201009173303900" title="$:/state/tab--86143343">
 <pre>$:/core/ui/ControlPanel/Plugins/Installed/Themes</pre>
 </div>
-<div created="20201009171149300" modified="20201117175748700" title="$:/state/tab-1749438307">
-<pre>$:/core/ui/ControlPanel/Info</pre>
+<div created="20201009171149300" modified="20201204160316900" title="$:/state/tab-1749438307">
+<pre>$:/core/ui/ControlPanel/Saving</pre>
 </div>
 <div created="20201009171151200" modified="20201009171151200" title="$:/state/tab-2065006209">
 <pre>$:/core/ui/ControlPanel/Saving/GitHub</pre>
@@ -9865,7 +9865,7 @@ Error message and password prompt
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20201117175458400" list="[[202011172322 ZettelKasten in TiddlyWiki]] ZettelKasten" modified="20201117175458400" title="$:/StoryList">
+<div created="20201204155902700" list="$:/ControlPanel [[Monte Carlo simulations]] ZettelKasten" modified="20201204160315100" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -10879,8 +10879,8 @@ This plugin also requires the JSZip plugin ([[$:/plugins/tiddlywiki/jszip]]) to 
 <div created="20201009173241400" modified="20201009173245700" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>centra</pre>
 </div>
-<div created="20201012173605600" modified="20201012173655600" title="$:/temp/search">
-<pre></pre>
+<div created="20201012173605600" modified="20201204155900800" title="$:/temp/search">
+<pre>est</pre>
 </div>
 <div created="20201009173237100" modified="20201009173237100" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/https://tiddlywiki.com/library/v5.1.22/index.html" url="https://tiddlywiki.com/library/v5.1.22/index.html">
 <pre>loaded</pre>
@@ -11023,8 +11023,20 @@ This plugin also requires the JSZip plugin ([[$:/plugins/tiddlywiki/jszip]]) to 
 <div created="20201011024535600" modified="20201011040452600" tags="k8s" title="Kubernetes">
 <pre>Kubernetes is a system for managing [[containerized applications|Containerization]] across multiple hosts ^^[[1|https://github.com/kubernetes/kubernetes/#kubernetes]]^^. It is a Greek word meaning &quot;helmsman&quot; or &quot;pilot&quot;. It is also the root of the word cybernetics. </pre>
 </div>
-<div created="20201016174035100" modified="20201018012808828" tags="stats" title="Monte Carlo simulations">
-<pre>I am interested in learning how to estimate probability distributions with Monte Carlo simulations. </pre>
+<div created="20201016174035100" modified="20201204160309400" tags="stats" title="Monte Carlo simulations">
+<pre>I am interested in learning how to estimate probability distributions with Monte Carlo simulations. 
+The below suggestions are from [[Michael Betancourt|https://twitter.com/betanalpha/status/1319330660214034432]]
+First one has to understand how we can formally quantify probability distributions (spoiler: only through expectation values):
+
+[[Probability Theory|https://betanalpha.github.io/assets/case_studies/probability_theory.html]]
+
+Then one can consider why this is hard in general before considering various computational estimation strategies:
+
+[[Probabilistic Computation|https://betanalpha.github.io/assets/case_studies/probabilistic_computation.html]]
+
+Finally one can venture into the challenges and opportunities of Markov chain Monte Carlo in the detail necessary to wield is well in practice:
+ 
+[[MCMC|https://betanalpha.github.io/assets/case_studies/markov_chain_monte_carlo.html]]</pre>
 </div>
 <div created="20201012172857500" modified="20201012173752400" tags="test" title="Testing">
 <pre>I am copying out a [[post|https://medium.com/@copyconstruct/testing-microservices-the-sane-way-9bb31d158c16]] on testing microservices from [[Cindy Sridharan|https://twitter.com/copyconstruct]] to understand it well. This posts primarily focuses on pre-production testing in the context of microservices. After this step, I want to be able to summarise it and pick out a few key points. </pre>
